Fixed timetable generation issue